--- a/WindowsFormsApplication1/Undefined 3.0.csproj
+++ b/WindowsFormsApplication1/Undefined 3.0.csproj
@@ -112,6 +112,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CHANGELOG.txt" />
     <Content Include="Undefined_Icon.ico" />
   </ItemGroup>
   <ItemGroup>
