--- a/WindowsFormsApplication1/Undefined 3.0.csproj
+++ b/WindowsFormsApplication1/Undefined 3.0.csproj
@@ -73,6 +73,9 @@
     <Compile Include="Methods3.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Methods4.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Methods1.cs">
